# CXAI_M

./: .gitignore  AGENTS.md  README.md  REPORTE_EJECUCION_NOTEBOOK.md  RESUMEN_RAPIDO_NOTEBOOK.txt  STATUS_PROYECTO.md  Taller_LIME_SHAP_base_real.ipynb  Taller_LIME_SHAP_base_real_JJMJP.ipynb  pyproject.toml
notebooks/: LIME_SHAP_tabular.ipynb  Taller_LIME_SHAP_base_real.ipynb  algorithmic_recourse_interpretable_colab_extended (1).ipynb  algorithmic_recourse_interpretable_colab_extended.ipynb  algorithmic_recourse_interpretable_colab_extended_91011.ipynb  algorithmic_recourse_interpretable_colab_extended_indice.txt  algorithmic_recourse_interpretable_colab_extended_sections_6_8_corrected.ipynb  contrafactuales_credito_sesgo_variables_es.ipynb  notebook_xai_robustez_incertidumbre_monitoreo.ipynb
