[project]
name = "cxai-m"
version = "0.1.0"
description = ""
authors = [
    {name = "RamiroSeb",email = "juanrayala12@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "shap (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
